--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "^19.1.0",
+    "react-compare-slider": "^3.1.0",
     "react-dom": "19.1.0",
     "react-slick": "^0.31.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yet-another-react-lightbox": "^3.25.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
