--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@img-comparison-slider/react": "^8.0.2",
     "@types/react-slick": "^0.23.13",
-    "framer-motion": "^12.23.22",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "^19.1.0",
